libapache2-mod-fcgid (1:2.3.7-1) UNRELEASED; urgency=low

  * Adopt the package. (Closes: #713917)

 -- Felix Geyer <fgeyer@debian.org>  Sat, 10 Aug 2013 10:35:57 +0200

libapache2-mod-fcgid (1:2.3.7-0.1) unstable; urgency=low

  * Non-maintainer upload.
  * New upstream release. (Closes: #689149)
    - Drop 20_honor_FcgidMaxProcessesPerClass_setting.dpatch, applied upstream.
  * Switch from dpatch to source format 3.0 (quilt). (Closes: #664353)
  * Fix the watch file, thanks to Bart Martens.
  * Fix building twice in a row. (Closes: #693625)
    - Call make distclean.

 -- Felix Geyer <fgeyer@debian.org>  Wed, 05 Jun 2013 22:14:50 +0200

libapache2-mod-fcgid (1:2.3.6-1.3) unstable; urgency=low

  * Non-maintainer upload.
  * Transition towards Apache 2.4. (Closes: #666863)
    - Use dh_apache2 instead of calling a2{en,dis}mod manually in the
      maintainer scripts.

 -- Felix Geyer <fgeyer@debian.org>  Mon, 20 May 2013 10:50:54 +0200

libapache2-mod-fcgid (1:2.3.6-1.2) unstable; urgency=low

  * Non-maintainer upload.
  * Fix "mod_fcgid: requests with chunked encoding have no body
    available to FCGI backend": Applied upstream patch
    (Closes: #691929)

 -- Tobias Frost <tobi@coldtobi.de>  Sun, 18 Nov 2012 18:33:32 +0100

libapache2-mod-fcgid (1:2.3.6-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * import r1037727 from upstream to fix vhost-specific process controls
     (Closes: #615814)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Wed, 07 Mar 2012 17:00:08 -0500

libapache2-mod-fcgid (1:2.3.6-1) unstable; urgency=low

  * New upstream release (Closes: #595276)

 -- Tatsuki Sugiura <sugi@nemui.org>  Thu, 11 Nov 2010 02:48:54 +0900

libapache2-mod-fcgid (1:2.3.5-2) unstable; urgency=low

  * Fix build problem with new ash (Closes: #583025)
    Thanks Hideki Yamane and Igor Galić.

 -- Tatsuki Sugiura <sugi@nemui.org>  Mon, 08 Feb 2010 09:58:38 +0900

libapache2-mod-fcgid (1:2.3.5-1) unstable; urgency=medium

  * New upstream release