@@ -1,0 +1,1 @@
+var/lib/apache2/fcgid/sock
