@@ -1,5 +1,4 @@
 README-FCGID
-STATUS-FCGID
 docs/manual/mod/mod_fcgid.xml.meta
 docs/manual/mod/mod_fcgid.xml
 docs/manual/mod/mod_fcgid.html
